--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,2 +1,17 @@
 [co-authored]
 other = "co-authored by"
+
+[contact-name]
+other = "Name"
+
+[contact-email]
+other = "Email address"
+
+[contact-email-help]
+other = "We'll never share your email with anyone else."
+
+[contact-message]
+other = "Message"
+
+[contact-send]
+other = "Send"
