[feat]: image shortcodes

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -30,3 +30,6 @@ other = "Error"
 
 [contact-alert-error-message]
 other = "An unexpected error occurred, please try again"
+
+[articles]
+other = "Articles"
